fix: fix program view